# rust_practice

./: LICENSE
base/src/: main.rs
chess/: Cargo.toml
chess/base/: Cargo.toml
chess/base/src/: board.rs  main.rs  piece.rs
chess/base/src/board/: macros.rs  movement.rs  square.rs
hecto/: Cargo.toml
hecto/src/: document.rs  editor.rs  main.rs  row.rs  terminal.rs
